--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "cypress-expect": "2.2.1",
     "cypress-pipe": "1.7.0",
     "prettier": "2.2.1",
-    "semantic-release": "17.4.4"
+    "semantic-release": "^19.0.2"
   },
   "dependencies": {
     "@cypress/browserify-preprocessor": "3.0.1",
