feat: remove Markdown specs
BREAKING CHANGE removed the Markdown support, this is only about
fiddles. For Markdown use https://github.com/bahmutov/cypress-markdown-preprocessor

--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
   "bugs": {
     "url": "https://github.com/bahmutov/cypress-fiddle/issues"
   },
-  "homepage": "https://github.com/bahmutov/cypress-fiddle#readme"
+  "homepage": "https://github.com/bahmutov/cypress-fiddle#readme",
+  "publishConfig": {
+    "access": "public"
+  }
 }
